--- a/neofetch/.config/neofetch/config.conf
+++ b/neofetch/.config/neofetch/config.conf
@@ -1,10 +1,8 @@
-# See this wiki page for more info
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    prin "\n"
+    #prin "\n"
     prin "\n"
     # info title
-    prin "$(color 6)--- maintheme ---"
+    prin "$(color 6) --- maintheme ---"
     info underline
 
     prin "\n"
@@ -15,7 +13,7 @@ print_info() {
     #info "Packages" packages
     info "Shell" shell
     #info "Resolution" resolution
-    info "DE" de
+    #info "DE" de
     info "WM" wm
     #info "WM Theme" wm_theme
     #info "Theme" theme
