--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -2,29 +2,28 @@ print_info() {
     #prin "\n"
     prin "\n"
     # info title
-    prin "$(color 6) --- maintheme ---"
+    prin "$(color 6)爪闩工廾丁廾乞从乞"
     info underline
 
     prin "\n"
-    info "OS" distro
+    distro="Arch"
+    info " OS" distro
     #info "Host" model
     #info "Kernel" kernel
-    info "Uptime" uptime
+    info " Uptime" uptime
     #info "Packages" packages
-    info "Shell" shell
+    info " Shell" shell
     #info "Resolution" resolution
-    #info "DE" de
-    info "WM" wm
+    info " wm" wm
     #info "WM Theme" wm_theme
     #info "Theme" theme
     #info "Icons" icons
-    info "Terminal" term
+    info "  Terminal" term
     #info "Terminal Font" term_font
     #info "CPU" cpu
     #info "GPU" gpu
-    info "Memory" memory
+    info " Memory" memory
     prin "\n"
-
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
@@ -36,10 +35,10 @@ print_info() {
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
+    prin "\n"
 
-    info cols
+    prin "$(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8) $(color 16) "
 }
-
 # Title
 
 
