--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,6 +18,7 @@
 background = #00
 foreground = ${xrdb:color7:#222}
 foreground-alt = ${xrdb:color7:#222}
+labels = ${xrdb:color3:#222}
 primary = ${xrdb:color1:#222}
 secondary = ${xrdb:color2:#222}
 alert = ${xrdb:color3:#222}
@@ -69,7 +70,7 @@ type = internal/xworkspaces
 format = <label-state>
 
 label-active = %icon%
-label-active-foreground = ${colors.primary}
+label-active-foreground = ${colors.labels}
 
 label-occupied = %icon%
 
