--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -103,7 +103,7 @@ label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-
+reverse-scroll = true
 format-volume-prefix = 
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <ramp-volume>
@@ -114,6 +114,8 @@ ramp-volume-2 = 墳
 ramp-volume-3 =  
 
 label-muted =  婢
+
+click-right = pavucontrol
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -175,9 +177,11 @@ label-font = 0
 [module/battery]
 type = internal/battery
 full-at = 99
-low-at = 5
+low-at = 10
 battery = BAT0
 adapter = AC0
+
+format-full = <ramp-capacity>
 
 format-charging = <animation-charging>
 
