--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -10,7 +10,7 @@ tab_fade 0 1 1 1
 
 map ctrl+alt+r load_config_file
 map ctrl+t new_tab
-map ctrl+w close_tab
+map ctrl+shift+w close_tab
 map ctrl+l clear_terminal to_cursor active
 
 background #1d1d1d
