--- a/x11/00-keyboard.conf
+++ b/x11/00-keyboard.conf
@@ -3,5 +3,5 @@ Section "InputClass"
         MatchIsKeyboard "on"
         Option "XkbLayout" "us,ru"
         Option "XkbModel" "pc105"
-        Option "XkbOptions" "grp:win_space_toggle, caps:escape"
+        Option "XkbOptions" "grp:win_space_toggle"
 EndSection
