--- a/configs/neofetch/config.conf
+++ b/configs/neofetch/config.conf
@@ -1,5 +1,5 @@
 print_info() {
-    #prin "\n"
+    prin "\n"
     prin "\n"
     # info title
     prin "$(color 6)爪闩工廾丁廾乞从乞"
@@ -35,7 +35,7 @@ print_info() {
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
-    prin "\n"
+    # prin "\n"
 
     prin "$(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8) $(color 16) "
 }
@@ -710,7 +710,7 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/home/maintheme/style/theme"
 
 
 # Ascii Options
