--- a/configs/neofetch/config.conf
+++ b/configs/neofetch/config.conf
@@ -1,5 +1,5 @@
 print_info() {
-    prin "\n"
+    # prin "\n"
     prin "\n"
     # info title
     prin "$(color 6)爪闩工廾丁廾乞从乞"
@@ -37,7 +37,9 @@ print_info() {
     # info "Locale" locale  # This only works on glibc systems.
     # prin "\n"
 
-    prin "$(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8) $(color 16) "
+    prin "$(color 9) $(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8) "
+
+    prin "$(color 8) $(color 7) $(color 6) $(color 5) $(color 4) $(color 3) $(color 2) $(color 1) $(color 9) "
 }
 # Title
 
