--- a/configs/neofetch/config.conf
+++ b/configs/neofetch/config.conf
@@ -37,9 +37,9 @@ print_info() {
     # info "Locale" locale  # This only works on glibc systems.
     # prin "\n"
 
-    prin "$(color 9) $(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8) "
+    prin "$(color 9) $(color 5) $(color 8) $(color 2) $(color 7) $(color 3) $(color 1) $(color 7) $(color 5) "
 
-    prin "$(color 8) $(color 7) $(color 6) $(color 5) $(color 4) $(color 3) $(color 2) $(color 1) $(color 9) "
+    prin "$(color 1)  $(color 6) $(color 3) $(color 6) $(color 9) $(color 5) $(color 2) $(color 4) $(color 9) "
 }
 # Title
 
