--- a/configs/neofetch/config.conf
+++ b/configs/neofetch/config.conf
@@ -7,6 +7,7 @@ print_info() {
 
     prin "\n"
     distro="Arch"
+    distro+=" 󰣇 "
     info " OS" distro
     #info "Host" model
     #info "Kernel" kernel
@@ -18,6 +19,7 @@ print_info() {
     #info "WM Theme" wm_theme
     #info "Theme" theme
     #info "Icons" icons
+    term+="󰄛 "
     info "  Terminal" term
     #info "Terminal Font" term_font
     #info "CPU" cpu
