--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -16,7 +16,7 @@
 
 [colors]
 background = #00
-foreground = ${xrdb:color7:#222}
+foreground = ${xrdb:color7:#fff}
 foreground-alt = ${xrdb:color7:#222}
 labels = ${xrdb:color3:#222}
 primary = ${xrdb:color1:#222}
@@ -39,17 +39,17 @@ border-size = 4pt
 border-color = #00000000
 
 padding-left = 0
-padding-right = 1
+padding-right = 2
 
-module-margin = 1
+module-margin = 6pt
 
-font-0 = "JetBrains Mono Thin;1"
-font-1 = "AurulentSansMono Nerd Font Mono:style=Regular:pixelsize=15;3.5"
-font-2 = "flags color world:style=Regular;2"
+font-0 = "JetBrainsMonoNL Nerd Font,JetBrainsMonoNL NF Thin:style=Thin,Regular"
+font-1 = "AurulentSansM Nerd Font Mono:style=Regular:size=5;3.5"
+font-2 = "flags color world:style=Regular;"
 
 modules-left = xworkspaces
 modules-center = date
-modules-right = pulseaudio xkeyboard wlan battery
+modules-right = vpn pulseaudio xkeyboard wlan battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -73,16 +73,17 @@ label-active = %icon%
 label-active-foreground = ${colors.labels}
 
 label-occupied = %icon%
+# label-occupied = 
 
-label-urgent = %icon%
+# label-urgent = %icon%
 
 label-empty = %icon%
 
-icon-0 = 0;  
-icon-1 = 1;  
-icon-2 = 2;  
-icon-3 = 3; 切 
-icon-4 = 4; ﱘ 
+icon-0 = 0; 
+icon-1 = 1; 
+icon-2 = 2; 
+icon-3 = 3; 
+icon-4 = 4; 
 
 occupied-scroll = true
 
@@ -105,15 +106,16 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 reverse-scroll = true
 format-volume-prefix = 
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <ramp-volume>
 
 ramp-volume-0 =  
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
+ramp-volume-1 = 󰖀 
+ramp-volume-2 = 󰕾 
 ramp-volume-3 =  
 
-label-muted =  婢
+label-muted =  󰖁 
+label-active-font = 2
 
 click-right = pavucontrol
 
@@ -127,36 +129,28 @@ label-layout-font = 3
 layout-icon-0 = ru;r
 layout-icon-1 = us;u
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+# label-indicator-padding = 0
+# label-indicator-margin = 0
+# label-indicator-foreground = ${colors.background}
+# label-indicator-background = ${colors.secondary}
 
 [network-base]
 type = internal/network
-interval = 5
-format-connected = <label-connected>
+interval = 2
+format-connected = <ramp-signal>
 format-disconnected = <label-disconnected>
-label-disconnected =  disconnected
+label-disconnected =  󰤭 
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
 label-connected = %essid%
+
+ramp-signal-0 =󰤯 
+ramp-signal-1 =󰤟 
+ramp-signal-2 =󰤢 
+ramp-signal-3 =󰤥 
+ramp-signal-4 =󰤨 
 
 [module/eth]
 inherit = network-base
@@ -167,12 +161,12 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %d-%m %H:%M
-;date-alt = %Y-%m-%d %H:%M
+date = %a %d-%m %H:%M
+format =  <label>
 
 label = %date%
 label-foreground = #ffd35f 
-label-font = 0
+label-font = 1
 
 [module/battery]
 type = internal/battery
@@ -181,33 +175,41 @@ low-at = 10
 battery = BAT0
 adapter = AC0
 
+
 format-full = <ramp-capacity>
 
 format-charging = <animation-charging>
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 =  
+animation-charging-1 =  
+animation-charging-2 =  
+animation-charging-3 =  
+animation-charging-4 =  
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity> 
 
-ramp-capacity-0 = 
+ramp-capacity-0 =  
 ramp-capacity-1 =  
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-2 =  
+ramp-capacity-3 =  
+ramp-capacity-4 =  
 ramp-capacity-0-foreground = #FF0000
 ramp-capacity-1-foreground = #FFA500
 ramp-capacity-2-foreground = #ffd700
 ramp-capacity-3-foreground = #009900
 ramp-capacity-4-foreground = #32cd32
 
-click-left = %percentage%
+click-left = echo wqe
 
 poll-interval = 3
+
+# [module/vpn]
+# type=custom/script
+# exec = echo vp
+# format-underline = #268bd2
+# format-prefix = "🖧 "
+# format-prefix-foreground = #5b
 
 [settings]
 screenchange-reload = true
