--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -16,12 +16,14 @@
 
 [colors]
 background = #00
+background_tr = #1f1f1f
 foreground = ${xrdb:color7:#fff}
 foreground-alt = ${xrdb:color7:#222}
 labels = ${xrdb:color3:#222}
 primary = ${xrdb:color1:#222}
 secondary = ${xrdb:color2:#222}
 alert = ${xrdb:color3:#222}
+
 
 [bar/mybar]
 width = 100%
@@ -48,8 +50,8 @@ font-1 = "AurulentSansM Nerd Font Mono:style=Regular:size=5;3.5"
 font-2 = "flags color world:style=Regular;"
 
 modules-left = xworkspaces
-modules-center = date
-modules-right = vpn pulseaudio xkeyboard wlan battery
+modules-center = calendar date
+modules-right = pulseaudio xkeyboard wlan battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -134,6 +136,17 @@ layout-icon-1 = us;u
 # label-indicator-foreground = ${colors.background}
 # label-indicator-background = ${colors.secondary}
 
+[module/calendar]
+type = custom/script
+exec = /home/maintheme/dotfiles/calendar.sh
+click-left = /home/maintheme/dotfiles/calendar.sh --popup &
+interval = 1
+format = " "
+; format-background = ${colors.background_tr}
+; format-foreground = ${colors.foreground}
+; format-prefix-foreground = ${colors.blue}
+
+
 [network-base]
 type = internal/network
 interval = 2
@@ -161,7 +174,8 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %a %d-%m %H:%M
+; date = %a %d-%m %H:%M
+date = %a, %d %b %H:%M
 format =  <label>
 
 label = %date%
