--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -5,18 +5,12 @@
 ;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
 ;==========================================================
 
 [colors]
 background = #00
 background_tr = #1f1f1f
+background-alt = #383838
 foreground = ${xrdb:color7:#fff}
 foreground-alt = ${xrdb:color7:#222}
 labels = ${xrdb:color3:#222}
@@ -27,44 +21,27 @@ alert = ${xrdb:color3:#222}
 
 [bar/mybar]
 width = 100%
-height = 20pt
+height = 15pt
 radius = 6
-
-; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-line-size = 3pt
-
 border-size = 4pt
-border-color = #00000000
-
-padding-left = 0
-padding-right = 2
-
-module-margin = 6pt
+module-margin = 5pt
 
 font-0 = "JetBrainsMonoNL Nerd Font,JetBrainsMonoNL NF Thin:style=Thin,Regular"
 font-1 = "AurulentSansM Nerd Font Mono:style=Regular:size=5;3.5"
 font-2 = "flags color world:style=Regular;"
+font-3 = "JetBrainsMonoNL Nerd Font,JetBrainsMonoNL NF,JetBrainsMonoNL NF Light:style=Light,Regular:size=10.5;0.5"
+font-4 = "JetBrainsMonoNL Nerd Font,JetBrainsMonoNL NF,JetBrainsMonoNL NF Light:style=Light,Regular:size=10.5;1"
 
 modules-left = xworkspaces
 modules-center = calendar date
-modules-right = pulseaudio xkeyboard wlan battery
+modules-right = pulseaudio wlan xkeyboard battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 enable-ipc = true
-
-; tray-position = right
-
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -75,9 +52,6 @@ label-active = %icon%
 label-active-foreground = ${colors.labels}
 
 label-occupied = %icon%
-# label-occupied = 
-
-# label-urgent = %icon%
 
 label-empty = %icon%
 
@@ -89,35 +63,15 @@ icon-4 = 4; 
 
 occupied-scroll = true
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
 [module/pulseaudio]
 type = internal/pulseaudio
 reverse-scroll = true
-format-volume-prefix = 
-format-volume-prefix-foreground = ${colors.foreground}
-format-volume = <ramp-volume>
 
+format-volume = <ramp-volume>
 ramp-volume-0 =  
-ramp-volume-1 = 󰖀 
-ramp-volume-2 = 󰕾 
-ramp-volume-3 =  
+ramp-volume-1 = 󰕾
 
 label-muted =  󰖁 
-label-active-font = 2
 
 click-right = pavucontrol
 
@@ -131,26 +85,10 @@ label-layout-font = 3
 layout-icon-0 = ru;r
 layout-icon-1 = us;u
 
-# label-indicator-padding = 0
-# label-indicator-margin = 0
-# label-indicator-foreground = ${colors.background}
-# label-indicator-background = ${colors.secondary}
-
-[module/calendar]
-type = custom/script
-exec = /home/maintheme/dotfiles/calendar.sh
-click-left = /home/maintheme/dotfiles/calendar.sh --popup &
-interval = 1
-format = " "
-; format-background = ${colors.background_tr}
-; format-foreground = ${colors.foreground}
-; format-prefix-foreground = ${colors.blue}
-
-
 [network-base]
 type = internal/network
 interval = 2
-format-connected = <ramp-signal>
+format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected =  󰤭 
 
@@ -158,6 +96,7 @@ label-disconnected =  󰤭
 inherit = network-base
 interface-type = wireless
 label-connected = %essid%
+label-connected-font = 4
 
 ramp-signal-0 =󰤯 
 ramp-signal-1 =󰤟 
@@ -165,34 +104,42 @@ ramp-signal-2 =󰤢
 ramp-signal-3 =󰤥 
 ramp-signal-4 =󰤨 
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
 [module/date]
 type = internal/date
-interval = 1
+interval = 5
 
-; date = %a %d-%m %H:%M
-date = %a, %d %b %H:%M
-format =  <label>
+date = %d %b, %a  %H:%M
 
 label = %date%
 label-foreground = #ffd35f 
-label-font = 1
+label-font = 5
+
+[module/calendar]
+type = custom/script
+exec = /home/maintheme/dotfiles/configs/polybar/calendar.sh
+click-left = /home/maintheme/dotfiles/configs/polybar/calendar.sh --popup &
+interval = 1
+format = ""
+format-foreground = ${colors.primary}
 
 [module/battery]
 type = internal/battery
-full-at = 99
-low-at = 10
+full-at = 100
+low-at = 5
 battery = BAT0
 adapter = AC0
 
+format-full = <ramp-capacity> <label-full>
+label-full = %percentage%%
+label-full-font = 4
 
-format-full = <ramp-capacity>
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = %percentage%%
+label-discharging-font = 4
 
-format-charging = <animation-charging>
+format-charging = <animation-charging> <label-charging>
+label-charging = %percentage%%
+label-charging-font = 4
 
 animation-charging-0 =  
 animation-charging-1 =  
@@ -200,8 +147,11 @@ animation-charging-2 = 
 animation-charging-3 =  
 animation-charging-4 =  
 animation-charging-framerate = 750
-
-format-discharging = <ramp-capacity> 
+animation-charging-0-foreground = #FF0000
+animation-charging-1-foreground = #FFA500
+animation-charging-2-foreground = #ffd700
+animation-charging-3-foreground = #009900
+animation-charging-4-foreground = #32cd32
 
 ramp-capacity-0 =  
 ramp-capacity-1 =  
@@ -213,8 +163,6 @@ ramp-capacity-1-foreground = #FFA500
 ramp-capacity-2-foreground = #ffd700
 ramp-capacity-3-foreground = #009900
 ramp-capacity-4-foreground = #32cd32
-
-click-left = echo wqe
 
 poll-interval = 3
 
@@ -228,5 +176,3 @@ poll-interval = 3
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
