--- a/configs/polybar/config.ini
+++ b/configs/polybar/config.ini
@@ -29,7 +29,7 @@ foreground = ${colors.foreground}
 border-size = 4pt
 module-margin = 4pt
 
-padding-left = 0
+padding-right = 1
 
 font-0 = "JetBrainsMonoNL Nerd Font,JetBrainsMonoNL NF Thin:style=Thin,Regular"
 font-1 = "AurulentSansM Nerd Font Mono:style=Regular:size=5;3.5"
